YAAAAAY latitude & longitude print on view

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
 <%= @IP %>
 sdgafdgadfg
-<span>lat:</span><h1 class = "latitude"></h1>
-<span>long:</span><h1 class = "longitude"></h1>
+<span>lat:</span><h1 class = "lat"></h1>
+<span>long:</span><h1 class = "long"></h1>
