saves user location to session

--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,2 +1,4 @@
 THIS WILL BE A BUTTON
-<%= link_to "GO", browse_path %>
+<%= link_to "GO", browse_path, class: "button" %>
+<span color = "red" class = "click">CLICK ME</span>
+message: <div class="msg"></div>
