--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -1,10 +1,13 @@
 HELLO YOUR LINK WORKED
-<span style ="color:pink"></span>
+<span style ="color:pink">
+  LAT: <%= @lat %>
+  LONG: <%= @long %>
+</span>
 
 <div id = "all">
-<% @photo_hash.keys.shuffle.each do |url| %>
+  <% @photo_hash.keys.shuffle.each do |url| %>
 
-  <div id =<%= url %> class = <%=@photo_hash[url]%> ></div>
+    <div id =<%= url %> class = <%=@photo_hash[url]%> ></div>
 
-<% end %>
+  <% end %>
 </div>
