show details accessed through ajax on click

--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -10,3 +10,6 @@ HELLO YOUR LINK WORKED
       <div id =<%= url %> class = <%= inner_hash[url] %> ></div>
   <% end %>
 </div>
+<div id = "details">
+  
+</div>
