--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -21,7 +21,8 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading dk-grey">How It Works</h2>
-                <h3 class="section-subheading text-muted">Wandr takes the guesswork and the research out of planning an outing.</h3>
+                <p class="text-muted">Wandr takes the research out of planning an outing, so you can focus on what inspires you.</p>
+                <!-- <h3 class="section-subheading text-muted">Wandr takes the guesswork and the research out of planning an outing.</h3> -->
             </div>
         </div>
         <div class="row text-center">
