--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -2,16 +2,16 @@
   <h1 class = "text-center pay dk-grey" id = "logo"><span class = "lime">W</span>andr</h1>
   <h3 class="section-subheading text-muted text-center">Rediscover your city.</h3>
   <div class = "center-block">
-    <%= link_to "[ Learn More ]", browse_path, class: "center-block lime button", id: "learn" %>
+    <%= link_to "[ Learn More ]", root_path, class: "center-block lime button", id: "learn" %>
   <hr>
   <span class = "click">CLICK ME</span>
   <div class = "center-block gly-div">
-    <%= link_to browse_path, class: "btn btn-default gly" do %>
+    <%= link_to root_path, class: "btn btn-default gly" do %>
       <span class = "pay">Wandr  </span><i class="fa fa-rocket"></i>
     <% end %>
   </div>
 
-  <%= link_to "Start Wandering", browse_path, class: "button center-block lime dk-grey-b", id: "go" %>
+  <%= link_to "Start Wandering", root_path, class: "button center-block lime dk-grey-b", id: "go" %>
 
 </div>
 
