--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -4,14 +4,10 @@
   <div class = "center-block">
     <%= link_to "[ Learn More ]", root_path, class: "center-block lime button", id: "learn" %>
   <hr>
-  <span class = "click">CLICK ME</span>
-  <div class = "center-block gly-div">
-    <%= link_to root_path, class: "btn btn-default gly" do %>
-      <span class = "pay">Wandr  </span><i class="fa fa-rocket"></i>
-    <% end %>
-  </div>
 
-  <%= link_to "Start Wandering", root_path, class: "button center-block lime dk-grey-b", id: "go" %>
+  <div class = "center-block gly-div">
+      <span class = "btn btn-default gly" id = "click"><span class = "pay">Wandr  </span><i class="fa fa-rocket"></i></span>
+  </div>
 
 </div>
 
