--- a/app/assets/stylesheets/agency.css
+++ b/app/assets/stylesheets/agency.css
@@ -847,12 +847,12 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
     text-shadow: none;
-    background: lightgrey;
+    background: none;
 }
 
 ::selection {
     text-shadow: none;
-    background: lightgrey;
+    background: none;
 }
 
 img::selection {
@@ -864,5 +864,5 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: lightgrey;
+    webkit-tap-highlight-color: none;
 }
