--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" id = "land-link"><i class="fa fa-rocket"></i></a>
+            <a class="navbar-brand" id = "land-link"><i class="fa fa-road"><div id = "lilgreen"></div></i></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,17 +40,19 @@
 </nav>
 
 <section id = "landing">
-<div class = "container">
-  <h1 class = "text-center pay dk-grey" id = "logo"><span class = "lime">W</span>andr</h1>
+<div class = "container center-block" id = "landing-con">
+  <h1 class = "text-center pay dk-grey" id = "logo"><span class = "">W</span><i class="fa fa-road" id = "road"><div id = "green"></div></i>ndr</h1>
   <h3 class="text-muted text-center">Rediscover your city.</h3>
-  <div class = "center-block">
-    <span class = "center-block lime button" id = "learn">[ Learn More ]</span>
-  </div>
+
 
 
     <div class = "center-block gly-div">
-        <span class = "btn btn-default gly" id = "click"><span class = "pay">Wandr  </span><i class="fa fa-rocket"></i></span>
+        <span class = "btn btn-default gly" id = "click"><span class = "pay">Wandr  </span><i class="fa fa-road"><div id = "white-div"></div></i></span>
     </div>
+    <div class = "center-block">
+      <span class = "center-block lime button" id = "learn">[ Learn More ]</span>
+    </div>
+    <h1 id = "hangry">Hangry Noms</h1>
 </div>
 </section>
 
@@ -84,7 +86,7 @@
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary lime"></i>
-                    <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-road fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading dk-grey">Go</h4>
                 <p class="text-muted">Once you've picked a destination, Wandr will tell you how to get there.</p>
@@ -99,7 +101,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Our Amazing Team</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
             </div>
         </div>
         <div class="row">
@@ -144,11 +146,7 @@
 
 <!-- BROWSE PHOTOS -->
 <section id = "photo-slides">
-<div class = "container">
-  <span>
-    LAT: <%= @lat %>
-    LONG: <%= @long %>
-  </span>
+<div class = "container" id = "photo-con">
     <div class = "row">
       <div class = "col-md-2">
         <div id = "left-g-d" class = "">
@@ -171,4 +169,14 @@
 </div>
 </section>
 <!-- SHOW PAGES -->
-<div id = "details"></div>
+<section id = "show">
+  <div class = "container">
+    <div id = "details"></div>
+  </div>
+</section>
+
+<section id = "show">
+  <div class = "container">
+    <div id = "details"></div>
+  </div>
+</section>
