--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -47,12 +47,12 @@
 
 
     <div class = "center-block gly-div">
-        <span class = "btn btn-default gly" id = "click"><span class = "pay">Wandr  </span><i class="fa fa-road"><div id = "white-div"></div></i></span>
+        <span class = "btn btn-default gly" id = "click"><span class = "pay">Wandr  </span><i class="fa fa-road" id = "lilroad"><div id = "white-div"></div></i></span>
     </div>
+    <h1 id = "hangry">Hangry <i class="fa fa-cutlery hang"></i> Noms</h1>
     <div class = "center-block">
       <span class = "center-block lime button" id = "learn">[ Learn More ]</span>
     </div>
-    <h1 id = "hangry">Hangry Noms</h1>
 </div>
 </section>
 
@@ -148,7 +148,7 @@
 <section id = "photo-slides">
 <div class = "container" id = "photo-con">
     <div class = "row">
-      <div class = "col-md-2">
+      <div class = "col-md-2 hide">
         <div id = "left-g-d" class = "">
           <span class="glyphicon glyphicon-triangle-left" aria-hidden="true" id = "left-g"></span>
         </div>
@@ -160,7 +160,7 @@
         </div>
     </div>
 
-    <div class = "col-md-2">
+    <div class = "col-md-2 hide">
       <div  id = "right-g-d" class = "">
         <span class="glyphicon glyphicon-triangle-right" aria-hidden="true" id = "right-g"></span>
       </div>
