added media queries

--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -147,7 +147,7 @@
 <section id = "photo-slides">
 <div class = "container" id = "photo-con">
     <div class = "row">
-      <div class = "col-md-2 hide">
+      <div class = "col-md-2" id = "left">
         <div id = "left-g-d" class = "">
           <span class="glyphicon glyphicon-triangle-left" aria-hidden="true" id = "left-g"></span>
         </div>
@@ -159,7 +159,7 @@
         </div>
     </div>
 
-    <div class = "col-md-2 hide">
+    <div class = "col-md-2" id = "right">
       <div  id = "right-g-d" class = "">
         <span class="glyphicon glyphicon-triangle-right" aria-hidden="true" id = "right-g"></span>
       </div>
