--- a/app/assets/stylesheets/agency.css
+++ b/app/assets/stylesheets/agency.css
@@ -258,7 +258,7 @@ fieldset[disabled] .btn-xl.active {
     }
 
     .navbar-default.navbar-shrink .navbar-brand {
-        font-size: 1.5em;
+        /*font-size: 1.5em;*/
     }
 }
 
