--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -110,9 +110,10 @@ section {
     position: absolute;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
+    overflow: auto;
     background: white;
 }
+
 
 #photo-con {
   /*height :100vh;
@@ -216,6 +217,11 @@ color:#ec8007
   position: relative;
 }
 
+#click:hover {
+  background: dimgrey;
+  color: #CFD11A;
+}
+
 #landing {
   padding: 0;
   background: url('sky2.jpg');
@@ -272,11 +278,30 @@ color:#ec8007
   color: green;
 }
 
-@media (max-width: @screen-sm) {
-  .hide {
+@media (max-width: 768px) {
+  #left, #right {
     display: none;
   }
   #all {
-    /*width: 100vw;*/
+    width: 100vw;
+    padding: 0;
+    background: white;
+
   }
+
+  #middle {
+    padding: 0;
+    margin-top: 55px;
+  }
+
+  #photo-slides {
+    padding: 0;
+  }
+
+  #all div img {
+    width :100%;
+    height: 100%;
+  }
+
+
 }
