--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" id = "land-link"><i class="fa fa-road"><div id = "lilgreen"></div></i></a>
+            <a class="" id = "land-link"><i class="fa fa-road"><div id = "lilgreen"></div></i></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -102,11 +102,17 @@
                 <h2 class="section-heading">Our Amazing Team</h2>
                 <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
             </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p class="large text-muted lilycate">Lily and Cate are students at the Ada Developers Academy in Seattle, Washington. Wandr is our capstone project. Hope you enjoy it!</p>
+                </div>
+            </div>
+
         </div>
         <div class="row">
             <div class="col-sm-6">
                 <div class="team-member">
-                    <%= image_tag("lily.jpg", class: "img-responsive img-circle") %>
+                    <%= image_tag("lily2.jpg", class: "img-responsive img-circle phot") %>
                     <h4>Lily Pace</h4>
                     <p class="text-muted">Design / Front-end Development</p>
                     <ul class="list-inline social-buttons">
@@ -121,7 +127,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="team-member">
-                    <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
+                  <%= image_tag("cate5.jpg", class: "img-responsive img-circle phot") %>
                     <h4>Cate Uselton</h4>
                     <p class="text-muted">Back-end Development</p>
                     <ul class="list-inline social-buttons">
@@ -133,11 +139,6 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p class="large text-muted">Lily and Cate are students at the Ada Developers Academy in Seattle, Washington. Wandr is our capstone project. Hope you enjoy it!</p>
             </div>
         </div>
     </div>
@@ -166,6 +167,11 @@
   </div>
   </div>
 </div>
+<section id = "show">
+  <div class = "container">
+    <div id = "details"></div>
+  </div>
+</section>
 </section>
 <!-- SHOW PAGES -->
 <section id = "show">
