--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -224,7 +224,7 @@ color:#ec8007
 
 #landing {
   padding: 0;
-  background: url('sky2.jpg');
+  background: url('/assets/sky2.jpg');
   background-size: 110%;
   /*z-index: -40;*/
 }
