fixed css } and image-url tag

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -310,9 +310,10 @@ color:#ec8007
   }
   #landing {
     padding: 0;
-    background: url('sky3.jpg');
+    background: image-url('sky3.jpg');
     background-size: 100vh;
-
+  }
+  
   #middle {
     padding: 0;
     margin-top: 55px;
