section change refactoring and loading section added

--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -55,6 +55,21 @@
 </div>
 </section>
 
+<!-- LOADING -->
+<section id= "loading">
+  <div id="load">
+    <div>g</div>
+    <div>n</div>
+    <div>i</div>
+    <div>r</div>
+    <div>e</div>
+    <div>d</div>
+    <div>n</div>
+    <div>a</div>
+    <div>w</div>
+  </div>
+</section>
+
 <!-- HOW TO USE -->
 <section id="howitworks">
     <div class="container">
