--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -157,19 +157,19 @@
 <section id = "photo-slides">
 <div class = "container" id = "photo-con">
     <div class = "row">
-      <div class = "col-md-2" id = "left">
+      <div class = "col-sm-1" id = "left">
         <div id = "left-g-d" class = "">
           <span class="glyphicon glyphicon-triangle-left" aria-hidden="true" id = "left-g"></span>
         </div>
     </div>
 
-    <div id = "middle" class = "col-md-8">
+    <div id = "middle" class = "col-sm-10">
         <div id = "all" class = "center-block">
 
         </div>
     </div>
 
-    <div class = "col-md-2" id = "right">
+    <div class = "col-sm-1" id = "right">
       <div  id = "right-g-d" class = "">
         <span class="glyphicon glyphicon-triangle-right" aria-hidden="true" id = "right-g"></span>
       </div>
