added fa glyphs

--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -159,7 +159,7 @@
     <div class = "row">
       <div class = "col-sm-1" id = "left">
         <div id = "left-g-d" class = "">
-          <span class="glyphicon glyphicon-triangle-left" aria-hidden="true" id = "left-g"></span>
+          <span class="fa fa-chevron-left" aria-hidden="true" id = "left-g"></span>
         </div>
     </div>
 
@@ -171,7 +171,7 @@
 
     <div class = "col-sm-1" id = "right">
       <div  id = "right-g-d" class = "">
-        <span class="glyphicon glyphicon-triangle-right" aria-hidden="true" id = "right-g"></span>
+        <span class="fa fa-chevron-right" aria-hidden="true" id = "right-g"></span>
       </div>
   </div>
   </div>
