--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -41,7 +41,7 @@
 
 
     <div class = "center-block gly-div">
-        <span class = "btn btn-default gly" id = "click"><span class = "pay">Wandr  </span><i class="fa fa-road" id = "lilroad"><div id = "white-div"></div></i></span>
+        <span class = "btn btn-default gly" id = "click"><span class = "pay">WANDR  </span><i class="fa fa-road" id = "lilroad"><div id = "white-div"></div></i></span>
     </div>
     <div class = "center-block">
       <span class = "center-block lime button" id = "learn">[ Learn More ]</span>
