sessions controller method prepared to save by params address string

--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -64,6 +64,13 @@
   </div>
 </section>
 
+<!--ENTER YOUR ADDRESS-->
+<section id= "address">
+  <form id="form_id" action="index.html" method="post">
+
+  </form>
+</section>
+
 <!-- HOW TO USE -->
 <section id="howitworks">
     <div class="container">
