--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -66,7 +66,7 @@
 
 <!--ENTER YOUR ADDRESS-->
 <section id= "address">
-  <%= form_tag "/address" do %> <!-- form_tag because not working off a model-->
+  <%= form_tag "/address", id: "address_submit" do %> <!-- form_tag because not working off a model-->
     <div class="field">             <!-- sessions_path will trigger create action in sessions controller-->
       <%= label_tag :address %><br />
       <%= text_field_tag :address, params[:address], placeholder: "meow" %>
