--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -176,10 +176,11 @@
   </div>
   </div>
 </div>
-<section id = "show">
-  <div class = "container">
-    <div id = "details"></div>
+<!-- <section id = "show"> -->
+  <div class = "container" id = "show-con">
+    <div id = "details">
+    </div>
   </div>
-</section>
+<!-- </section> -->
 </section>
 <!-- SHOW PAGES -->
