--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,8 +30,9 @@ body {
 }
 .place-description {
   padding: 20px;
-  font-size: 1.4em;
+  font-size: 1.2em;
   margin-top: 0px;
+  text-align: center;
 }
 
 // .name-div {
