--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -125,11 +125,11 @@
                     <h4>Lily Pace</h4>
                     <p class="text-muted">Design / Front-end Development</p>
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://twitter.com/lilyfromseattle"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-github"></i></a>
+                        <li><a href="https://github.com/lilyfromseattle"><i class="fa fa-github"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/pub/lily-pace/40/331/b14"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -140,11 +140,11 @@
                     <h4>Cate Uselton</h4>
                     <p class="text-muted">Back-end Development</p>
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://twitter.com/catusel"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-github"></i></a>
+                        <li><a href="https://github.com/catstavi"><i class="fa fa-github"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/pub/cate-uselton/61/5bb/62a"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
