--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,57 @@ body {
   background: #f7f7f7;
 }
 
+#address-submit {
+  // padding: 10px;
+  font-family: 'Canterell';
+  width: 400px;
+  background: pink;
+}
+
+.field {
+  // background: red;
+  display: inline-block;
+  margin: 0;
+  font-family: 'Canterell';
+  // margin-left: 70px;
+}
+
+.actions input {
+  border: none;
+  display: inline-block;
+  margin: 0;
+  padding: 11px;
+  margin-left: -5px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  font-family: 'Paytone One';
+  font-size: 1.05em;
+  background: #CFD11A;
+  color: dimgrey;
+  // font-size: 1.1em;
+  // font-family: 'Paytone One';
+  // font-size: .9em;
+}
+
+.actions{
+  display: inline-block;
+  margin: 0;
+  margin-left: 0px;
+  }
+#address {
+  margin: 0;
+  border: none;
+  width: 280px;
+  padding: 10px;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  font-family: 'Cantarell';
+  background: white;
+}
+
+#add-con {
+  width: 370px;
+}
 #details {
   margin: 0;
 }
@@ -41,7 +92,7 @@ body {
 //
 // }
 .place-name {
-  font-size: 3.5em;
+  font-size: 3em;
   text-align: center;
   margin-top: -25px;
 }
@@ -168,11 +219,13 @@ section {
     background: #f7f7f7;
 }
 
-
+#enter-ad {
+  color: dimgrey;
+}
 #photo-con {
   /*height :100vh;
   overflow: hidden;*/
-  margin-top: -10px;
+  margin-top: -25px;
 }
 body {
   font-family: 'Cantarell', sans-serif;
