--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,22 @@ body {
   background: #f7f7f7;
 }
 
+#wtf {
+  font-size: 7em;
+  color: #CFD11A;
+}
+#address-section {
+  top: -100%;
+  background: #f7f7f7;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+#loading {
+   background: #f7f7f7;
+}
 #address-submit {
   // padding: 10px;
   font-family: 'Canterell';
