--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,7 @@ body {
 #wtf {
   font-size: 7em;
   color: #CFD11A;
+  width: 100px;
 }
 #address-section {
   top: -100%;
@@ -186,10 +187,16 @@ body {
   /*z-index: 1;*/
 
 }
+
+#nav-con {
+  top: 0;
+  margin-top: 0;
+}
 #my-nav {
   padding: 2px;
   font-family: 'Cantarell';
-  box-shadow: 2px 3px 8px lightgrey;
+  // box-shadow: 2px 3px 8px lightgrey;
+  // box-shadow: none;
 }
 
 .tag2 {
@@ -206,8 +213,11 @@ section {
   /*top: -100%;*/
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: auto;
+  top: 0;
+  // margin-top: -20px;
+  padding-top: 0;
 }
 #howitworks {
   background: #f7f7f7;
@@ -330,7 +340,7 @@ color:#ec8007
 
 #learn {
   margin-top: 30px;
-  margin-bottom: 30px;
+  // margin-bottom: 30px;
   font-size: 1.4em;
   color: dimgrey;
 }
@@ -356,7 +366,8 @@ color:#ec8007
 #landing-con {
   /*z-index :-5;*/
   /*margin-top :-50px;*/
-  padding-top: 90px;
+  // padding-top: 90px;
+  margin: 0;
   height: 100vh;
   width: 70vw;
   background: rgba(255, 255, 255, .8);
@@ -478,7 +489,7 @@ color:#ec8007
 
   #landing-con {
     width: 100%;
-    height: 120%;
+    // height: 120%;
   }
 
 }
