--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-top" id = "my-nav">
-    <div class="container">
+    <div class="container" id = "nav-con">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -67,9 +67,8 @@
 <!--ENTER YOUR ADDRESS-->
 <section id= "address-section">
   <div class = "container" id = "add-con-1">
-    <div class = "center-block"><h4 class = "text-center" id = "enter-ad">Wandr requires geolocation</h4>
-    <span class="fa fa-bullseye" id = "wtf"></span>
-  </div>
+    <div class = "center-block" id = "wtf"><span class="fa fa-map-marker"></span></div>
+    <div class = "center-block"><h4 class = "text-center" id = "enter-ad">Wandr requires geolocation</h4></div>
     <p class = "text-center dk-grey"> Enable geolocation and refresh the page or fill out the address form below.</p>
   </div>
   <div class = "center-block" id = "add-con">
