link cursor on learn more span adjusted

--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -44,7 +44,7 @@
         <span class = "btn btn-default gly" id = "click"><span class = "pay">WANDR  </span><i class="fa fa-road" id = "lilroad"><div id = "white-div"></div></i></span>
     </div>
     <div class = "center-block">
-      <span class = "center-block lime button link-cursor" id = "learn">[ Learn More ]</span>
+      <span class = "center-block lime button" id = "learn"><span class="link-cursor">[ Learn More ]</span></span>
     </div>
 </div>
 </section>
