--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -36,7 +36,7 @@
 <section id = "landing">
 <div class = "container center-block" id = "landing-con">
   <h1 class = "text-center pay dk-grey" id = "logo"><span class = "">W</span><i class="fa fa-road" id = "road"><div id = "green"></div></i>ndr</h1>
-  <h3 class="text-muted text-center">Rediscover your city.</h3>
+  <h3 class="text-muted text-center rediscover">Rediscover your city.</h3>
 
 
 
