--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -291,8 +291,6 @@ section {
 
 }
 #landing {
-  background: white;
-  /*top: -100%;*/
   position: absolute;
   width: 100%;
   height: 100vh;
@@ -301,6 +299,11 @@ section {
   margin-top: 0;
   // margin-top: -20px;
   padding-top: 0;
+  padding: 0;
+  background: image-url('sky2.jpg');
+  // background-size: 110%;
+  height: 100vh;
+  /*z-index: -40;*/
 }
 #howitworks {
   background: #f7f7f7;
