begin rescue block plus js handler

--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -202,4 +202,7 @@
   </div>
 <!-- </section> -->
 </section>
-<!-- SHOW PAGES -->
+<!-- SORRY BRO -->
+<section id="sorry">
+  <p> Sorry dude, there's nothing worth checking out around there. </p>
+<section>
