say sorry when we find nothing

--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -205,5 +205,5 @@
 </section>
 <!-- SORRY BRO -->
 <section id="sorry">
-  <p> Sorry dude, there's nothing worth checking out around there. </p>
+  <p> Sorry dude, we couldn't find anywhere cool. </p>
 <section>
