--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -44,7 +44,7 @@
         <span class = "btn btn-default gly" id = "click"><span class = "pay">WANDR  </span><i class="fa fa-road" id = "lilroad"><div id = "white-div"></div></i></span>
     </div>
     <div class = "center-block">
-      <span class = "center-block lime button" id = "learn"><span class="link-cursor">[ Learn More ]</span></span>
+      <span class = "center-block lime button" id = "learn"><span class="link-cursor">   [ Learn More ]</span></span>
     </div>
 </div>
 </section>
@@ -72,14 +72,26 @@
     <p class = "text-center dk-grey"> Enable geolocation and refresh the page or fill out the address form below.</p>
   </div>
   <div class = "center-block" id = "add-con">
-  <%= form_tag "/address", id: "address_submit" do %> <!-- form_tag because not working off a model-->
-    <br>
-    <div class="field">             <!-- sessions_path will trigger create action in sessions controller-->
-      <%= text_field_tag :address, params[:address], placeholder: "221 B Baker St, London, England" %>
-    </div>
-    <div class="actions"><%= submit_tag "Submit" %></div>
-  <% end %>
-</div>
+    <%= form_tag "/address", id: "address_submit" do %> <!-- form_tag because not working off a model-->
+      <br>
+      <div class="field">             <!-- sessions_path will trigger create action in sessions controller-->
+        <%= text_field_tag :address, params[:address], placeholder: "221 B Baker St, London, England" %>
+      </div>
+      <div class="actions"><%= submit_tag "Submit", class: "" %></div>
+    <% end %>
+  </div>
+
+  <div class = "" id = "add-con-mob">
+    <%= form_tag "/address", id: "address_submit" do %> <!-- form_tag because not working off a model-->
+      <br>
+      <div class="field col-md-12">             <!-- sessions_path will trigger create action in sessions controller-->
+        <%= text_field_tag :address, params[:address], placeholder: "221 B Baker St, London, England" %>
+      </div>
+      <div class="actions col-md-12"><%= submit_tag "Submit", class: "" %></div>
+    <% end %>
+  </div>
+
+
 </div>
 </section>
 
