--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -157,7 +157,13 @@ body {
 
 #go-link:hover {
   background: lightgrey;
+  text-decoration: none;
 }
+
+#go-link:visited:active {
+  text-decoration: none !important;
+}
+
 .link-text {
   font-family: 'Paytone One';
   color: dimgrey;
