pusheen hangry link appears

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,6 +32,12 @@ body {
   margin-top :-55px;
 }
 
+.hangry-link {
+  border: 5px solid rgba(0, 0, 0, 0.35);
+  border-radius: 100%;
+  
+}
+
 #details div {
   display: none;
 }
