--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,8 +20,29 @@
 body {
   background: #f7f7f7;
   padding: 0;
+  display: none;
 }
 
+#sorry p {
+  font-family: 'Paytone One';
+  text-align: center;
+  font-size: 1.5em;
+}
+#error-msg p {
+  text-align: center;
+  background-image:
+  linear-gradient(
+    to right,
+    #f7f7f7, #CFD11A, #f7f7f7
+  );
+}
+
+.flagi {
+  margin-left: 20px;
+}
+#flagme .flagi {
+  color: dimgrey;
+}
 #add-con-mob {
   display: none;
 }
