--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <script src="../../assets/javascripts/jquery.mobile.custom.min.js"></script> -->
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%= favicon_link_tag 'favicon96x96.png' %>
 </head>
 <body id = "my-body">
 
